fix close 'x'  on mobile menu

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -25,9 +25,6 @@ input.togglerMenu {
   &__phone-icon {
     display: none;
   }
-  &__hamburg-icon {
-    display: none;
-  }
   &__link {
     text-decoration: none;
     color: $header-color-text;
